services/app-platform/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      component: app-platform
  template:
    metadata:
      labels:
        component: app-platform
    spec:
      imagePullSecrets:
        - name: registry-pull
      containers:
        - name: app-platform
          image: localhost/farahcaa/lexgrip-monorepo/app-platform:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
