services/app-platform/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    component: app-platform
  ports:
    - port: 80
      name: http
      targetPort: 8080
