services/app-platform/k8s/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`app-platform.localhost`)
      kind: Rule
      services:
          # Must be prefixed with the defined prefix
          # due to a k8s manifest "blind-spot"
        - name: app-platform-service
          port: 80
